--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,7 +2,8 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches: [main]
+    tags:
+      - 'v*.*.*'
 
 jobs:
   build-and-push:
@@ -16,6 +17,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Extracting metadata for Docker
+        id: meta
+        uses: docker/meta/data-action@v5
+        with:
+          images: jordanhenman/henman-ceg3120
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=raw,value=latest
+          
       - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
@@ -30,4 +42,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: jordanhenman/henman-ceg3120:latest
+          tags: ${{ steps.meta.outputs.tags }}
